[Fix] overflow

--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
-  font-family: "Source Code Pro",
-    sans-serif;
+  font-family: "Source Code Pro", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
